include/pitangus/microsped.h


#define MSPED_HTTP_TIMEOUT_PADRAO 5000
#define MSPED_SMTP_TIMEOUT_PADRAO 5000
#define MSPED_LOTE_QTD_MAX_ITENS 49
#define MSPED_LOTE_TAMANHO_MAX 500 * 1024
enum MSPED_TIPO {
    MSPED_TIPO_NENHUM = 0,
    MSPED_TIPO_NFE = 1,
    MSPED_TIPO_CTE = 2,
    MSPED_TIPO_MDFE = 3
};
enum MSPED_DOC_TIPO {
    MSPED_DOC_TIPO_NENHUM = 0,
    MSPED_DOC_TIPO_CPF = 1,
    MSPED_DOC_TIPO_CNPJ = 2,
    MSPED_DOC_TIPO_IE = 3
};
enum MSPED_CUF {
    MSPED_CUF_NENHUM = 0,
    MSPED_CUF_AC = 12,
    MSPED_CUF_AL = 27,
    MSPED_CUF_AP = 16,
    MSPED_CUF_AM = 13,
    MSPED_CUF_AN = 91,
    MSPED_CUF_BA = 29,
    MSPED_CUF_CE = 23,
    MSPED_CUF_DF = 53,
    MSPED_CUF_ES = 32,
    MSPED_CUF_GO = 52,
    MSPED_CUF_MA = 21,
    MSPED_CUF_MT = 51,
    MSPED_CUF_MS = 50,
    MSPED_CUF_MG = 31,
    MSPED_CUF_PA = 15,
    MSPED_CUF_PB = 25,
    MSPED_CUF_PR = 41,
    MSPED_CUF_PE = 26,
    MSPED_CUF_PI = 22,
    MSPED_CUF_RJ = 33,
    MSPED_CUF_RN = 24,
    MSPED_CUF_RS = 43,
    MSPED_CUF_RO = 11,
    MSPED_CUF_RR = 14,
    MSPED_CUF_SC = 42,
    MSPED_CUF_SP = 35,
    MSPED_CUF_SE = 28,
    MSPED_CUF_TO = 17
};
enum MSPED_AMBIENTE {
    MSPED_AMB_NENHUM = 0,
    MSPED_AMB_PRODUCAO = 1,
    MSPED_AMB_HOMOLOGACAO = 2
};
enum MSPED_NF_MODELO {
    MSPED_NF_NENHUM = 0,
    MSPED_NF_MODELO_55 = 55,
    MSPED_NF_MODELO_65 = 65
};
enum MSPED_SV {
    MSPED_SV_NENHUM = 0,
    MSPED_SVAN = 91,
    MSPED_SVRS = 1,
    MSPED_SVCAN = 2,
    MSPED_SVCRS = 3
};
enum MSPED_PROCESSO_TIPO {
    MSPED_PROC_TIPO_NENHUM = 0,
    MSPED_PROC_TIPO_ASSINCRONO = 1,
    MSPED_PROC_TIPO_SINCRONO = 2
};
enum MSPED_SMTP_TIPO_CONTEUDO {
    MSPED_SMTP_TIPO_CONT_NENHUM = 0,
    MSPED_SMTP_TIPO_CONT_TEXTO = 1,
    MSPED_SMTP_TIPO_CONT_HTML = 2
};
struct msped_cfg;
struct msped_lote;
struct msped_smtp;
typedef void (*msped_erro_callback)(void *cls, const char *msg);
typedef bool (*msped_http_tentativa_callback)(void *cls, const void *http_client, const char *url);
typedef size_t (*msped_http_escrita_callback)(void *dados, size_t tam, size_t qtd, void *cls);
typedef uint64_t (*msped_lote_geraracao_id_callback)(void *cls);
typedef bool (*msped_evento_assinatura_msg_callback)(void *cls, const char *msg, const char *id_tag,
                                                     const char **msg_ass);
typedef bool (*msped_atribuir_prot_msg_callback)(void *cls, void *doc_retornado);
MSPED_EXTERN void msped_inicializar();
MSPED_EXTERN void msped_finalizar();
MSPED_EXTERN struct msped_cfg *msped_cfg_arquivo_novo(enum MSPED_TIPO tipo, enum MSPED_CUF cuf,
                                                      enum MSPED_AMBIENTE ambiente, enum MSPED_SV sv,
                                                      enum MSPED_NF_MODELO modelo,
                                                      const char *arquivo_modelo,
                                                      const char *pfx, const char *pfx_senha,
                                                      const char *n_versao, const char *token, const char *id_token,
                                                      long http_timeout, bool depuravel,
                                                      msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN void msped_cfg_liberar(struct msped_cfg *cfg);
MSPED_EXTERN bool msped_cfg_ok(struct msped_cfg *cfg);
MSPED_EXTERN bool msped_cfg_ws_info(struct msped_cfg *cfg, const char *servico,
                                    char **metodo, char **operacao, char **versao, char **sv_str, char **url,
                                    msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN bool msped_consultar_disponibilidade(struct msped_cfg *cfg, const char *servico,
                                                  msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN bool msped_consultar_situacao(struct msped_cfg *cfg, const char *chave,
                                           msped_http_escrita_callback http_escrita_cb, void *http_escrita_cls,
                                           msped_http_tentativa_callback http_tentativa_cb, void *http_tentativa_cls,
                                           msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN bool msped_consultar_status_servico(struct msped_cfg *cfg,
                                                 msped_http_escrita_callback http_escrita_cb, void *http_escrita_cls,
                                                 msped_http_tentativa_callback http_tentativa_cb, void *http_tentativa_cls,
                                                 msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN bool msped_consultar_cadastro(struct msped_cfg *cfg, enum MSPED_DOC_TIPO tipo_doc, const char *doc,
                                           msped_http_escrita_callback http_escrita_cb, void *http_escrita_cls,
                                           msped_http_tentativa_callback http_tentativa_cb, void *http_tentativa_cls,
                                           msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN struct msped_lote *msped_lote_novo(msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN void msped_lote_liberar(struct msped_lote *lote);
MSPED_EXTERN bool msped_lote_ok(struct msped_lote *lote);
MSPED_EXTERN bool msped_lote_arquivo_adicionar(struct msped_lote *lote, const char *arquivo_xml,
                                               msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN const char *msped_lote_arquivo_obter_por_indice(struct msped_lote *lote, uint8_t indice,
                                                             msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN int8_t msped_lote_contar(struct msped_lote *lote);
MSPED_EXTERN char *msped_doc_obter_chave(void *doc, const char *tag);
MSPED_EXTERN bool msped_qrcode_acrescentar(struct msped_cfg *cfg, void *xml_doc,
                                           msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN bool msped_enviar_lote(struct msped_cfg *cfg, struct msped_lote *lote, enum MSPED_PROCESSO_TIPO processo,
                                    msped_lote_geraracao_id_callback lote_gera_id_cb, void *lote_gera_id_cls,
                                    msped_http_escrita_callback http_escrita_cb, void *http_escrita_cls,
                                    msped_http_tentativa_callback http_tentativa_cb, void *http_tentativa_cls,
                                    msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN bool msped_consultar_recibo(struct msped_cfg *cfg, uint64_t recibo,
                                         msped_http_escrita_callback http_escrita_cb, void *http_escrita_cls,
                                         msped_http_tentativa_callback http_tentativa_cb, void *http_tentativa_cls,
                                         msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN char *msped_atribuir_prot_msg(const char *tagproc, const char *tagmsg, const char *xmlmsg,
                                           const char *tagretorno, const char *xmlretorno, bool *atribuido,
                                           msped_atribuir_prot_msg_callback atrib_cb, void *atrib_cls,
                                           msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN bool msped_enviar_evento_cce(struct msped_cfg *cfg, enum MSPED_DOC_TIPO tipo_doc, const char *doc,
                                          const char *chave, const char *x_correcao, uint8_t n_seq_evento,
                                          msped_evento_assinatura_msg_callback assin_msg_cb, void *assin_msg_cls,
                                          msped_lote_geraracao_id_callback lote_gera_id_cb, void *lote_gera_id_cls,
                                          msped_http_escrita_callback http_escrita_cb, void *http_escrita_cls,
                                          msped_http_tentativa_callback http_tentativa_cb, void *http_tentativa_cls,
                                          msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN bool msped_enviar_evento_canc(struct msped_cfg *cfg, enum MSPED_DOC_TIPO tipo_doc, const char *doc,
                                           const char *chave, const char *x_just, const char *n_prot,
                                           msped_evento_assinatura_msg_callback assin_msg_cb, void *assin_msg_cls,
                                           msped_lote_geraracao_id_callback lote_gera_id_cb, void *lote_gera_id_cls,
                                           msped_http_escrita_callback http_escrita_cb, void *http_escrita_cls,
                                           msped_http_tentativa_callback http_tentativa_cb, void *http_tentativa_cls,
                                           msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN void msped_smtp_inicializar();
MSPED_EXTERN void msped_smtp_finalizar();
MSPED_EXTERN struct msped_smtp *msped_smtp_novo(const char *servidor, long porta, bool ssl, const char *usuario,
                                                const char *senha, long timeout, bool depuravel,
                                                msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN void msped_smtp_liberar(struct msped_smtp *smtp);
MSPED_EXTERN bool msped_smtp_ok(struct msped_smtp *smtp);
MSPED_EXTERN bool msped_smtp_enviar(struct msped_smtp *smtp, enum MSPED_SMTP_TIPO_CONTEUDO tipo_conteudo,
                                    const char *de, const char *para, const char *cc, const char *cco,
                                    const char *titulo, const char *msg, const char *anexos,
                                    msped_erro_callback erro_cb, void *erro_cls);
MSPED_EXTERN char *msped_sha1_criar_hash(const char *str);
MSPED_EXTERN enum MSPED_DOC_TIPO msped_extrair_tipo_doc(const char *doc);
MSPED_EXTERN bool msped_extrair_cuf_modelo(const char *chave, enum MSPED_CUF *cuf, enum MSPED_NF_MODELO *modelo);
MSPED_EXTERN const char *msped_cuf_para_uf(enum MSPED_CUF cuf);
MSPED_EXTERN enum MSPED_CUF msped_uf_para_cuf(const char *uf);
MSPED_EXTERN bool msped_validar_tipo(enum MSPED_TIPO tipo);
MSPED_EXTERN bool msped_validar_cuf(enum MSPED_CUF cuf);
MSPED_EXTERN bool msped_validar_ambiente(enum MSPED_AMBIENTE ambiente);
MSPED_EXTERN const char *msped_ambiente_para_str(enum MSPED_AMBIENTE ambiente);
MSPED_EXTERN bool msped_validar_modelo_nf(enum MSPED_NF_MODELO modelo);
MSPED_EXTERN const char *msped_modelo_para_str(enum MSPED_NF_MODELO modelo);
MSPED_EXTERN enum MSPED_NF_MODELO msped_str_para_modelo(const char *str);
MSPED_EXTERN bool msped_validar_chave(const char *chave);